リンク差し替え

--- a/Packages/ja.enonyauta.alt.syamonshop.autosave/package.json
+++ b/Packages/ja.enonyauta.alt.syamonshop.autosave/package.json
@@ -6,7 +6,7 @@
   "description": "Auto save unity extension.",
   "author": {
     "name": "シャモン",
-    "url": "https://x.com/Syamon1224"
+    "url": "https://syamon.booth.pm/items/5080512"
   },
   "vpmDependencies": {}
 }
